PF Community - Fixed roll template header postion and alignment failing when not using a header image. - Copied the latest sheet source code to the repo.

--- a/Pathfinder Community/pathfinder_community.css
+++ b/Pathfinder Community/pathfinder_community.css
@@ -1077,8 +1077,7 @@ pf-wrapper,
     cursor: pointer;
     display: flex;
     font-weight: normal;
-    height: 2.15rem;
-    padding: 3px 6px 4px 6px;
+    padding: 4px 6px 3px 6px;
 }
 
 .charsheet .monster-indicator label:has(.condition-exists.npc-show:checked):hover,
@@ -1411,12 +1410,17 @@ also need 1 more level in selector or base css will override border */
     background-color: #737373;
     margin-bottom: -11rem;
     margin-inline: auto;
-    outline: 3px solid #e20c0c;
+    outline: 2px solid #e20c0c;
     outline-offset: -1px;
+    padding-bottom: 1rem;
     position: relative;
-    top: -3.5em;
+    top: -4em;
     width: 95%;
     z-index: 3;
+}
+
+.charsheet .section-config > h2 {
+    margin-left: .4rem;
 }
 
 .charsheet .pf-wrapper .section-config .table-row span:not(.table-config-row-name),
@@ -2348,7 +2352,7 @@ also need 1 more level in selector or base css will override border */
 .charsheet .h3.clickheader,
 .charsheet .h2.clickheader {
     display: inline-block;
-    margin-left: -.25em;
+    margin-left: -.2rem;
 }
 
 .charsheet .showarrow.ack-button {
@@ -2827,12 +2831,13 @@ span[data-i18n-title="display-settings-config"]:has(input.cssbutton:not(:checked
 }
 
 .charsheet .cssbutton-label {
-    font-weight: bold;
+    cursor: help;
     font-size: 1rem;
     font-style: italic;
-    vertical-align: bottom;
-    cursor: help;
+    font-weight: bold;
     line-height: 1em;
+    padding-top: 3px;
+    vertical-align: bottom;
 }
 
 .charsheet input.configbutton,
@@ -4384,11 +4389,8 @@ span[data-i18n-title="display-settings-config"]:has(input.cssbutton:not(:checked
 }
 
 .charsheet .monster-indicator {
-    font-size: 1.6rem;
-    margin: auto;
-    margin-right: 1rem;
-    margin-top: 0;
-    max-width: fit-content;
+    font-size: 1.2rem;
+    margin: 0 .5rem auto auto;
 }
 
 .charsheet .section-header {
@@ -4782,7 +4784,7 @@ equipmentnav ~ tabinputtab99:not(:checked) ~ tabinputtab9:not(:checked) ~ tabinp
     color: initial;
 }
 
-.sheet-rolltemplate-pf_generic .sheet-rolltemplate-pf_generic .sheet-roll-header,
+/* .sheet-rolltemplate-pf_generic .sheet-rolltemplate-pf_generic .sheet-roll-header,
 .sheet-rolltemplate-pf_ability .sheet-rolltemplate-pf_ability .sheet-roll-header,
 .sheet-rolltemplate-pf_defense .sheet-rolltemplate-pf_defense .sheet-roll-header,
 .sheet-rolltemplate-pf_attack .sheet-rolltemplate-pf_attack .sheet-roll-header,
@@ -4798,6 +4800,26 @@ equipmentnav ~ tabinputtab99:not(:checked) ~ tabinputtab9:not(:checked) ~ tabinp
     overflow: hidden;
     vertical-align: bottom;
     width: 100%;
+} */
+
+/* FIX THE TEMPLATE */
+.sheet-rolltemplate-pf_generic .sheet-rolltemplate-pf_generic .sheet-roll-header,
+.sheet-rolltemplate-pf_attack .sheet-roll-header,
+.sheet-rolltemplate-pf_ability .sheet-rolltemplate-pf_ability .sheet-roll-header,
+.sheet-rolltemplate-pf_defense .sheet-rolltemplate-pf_defense .sheet-roll-header,
+.sheet-rolltemplate-pf_attack .sheet-rolltemplate-pf_attack .sheet-roll-header,
+.sheet-rolltemplate-pf_spell .sheet-rolltemplate-pf_spell .sheet-roll-header,
+.sheet-rolltemplate-pf_block .sheet-rolltemplate-pf_block .sheet-roll-header {
+    align-items: center;
+    border-style: solid;
+    border-width: 0.0625rem;
+    display: inline-flex;
+    flex-direction: row-reverse;
+    flex-wrap: wrap;
+    font-size: 14px;
+    font-weight: bold;
+    justify-content: left;
+    width: -webkit-fill-available;
 }
 
 .sheet-rolltemplate-pf_generic .sheet-roll-header a,
@@ -4821,6 +4843,7 @@ equipmentnav ~ tabinputtab99:not(:checked) ~ tabinputtab9:not(:checked) ~ tabinp
     line-height: 1.5;
     padding: 2px;
     vertical-align: baseline;
+    /* FIX THE TEMPLATE */
 }
 
 .sheet-rolltemplate-pf_generic div.sheet-roll-accessible,
@@ -4867,7 +4890,11 @@ equipmentnav ~ tabinputtab99:not(:checked) ~ tabinputtab9:not(:checked) ~ tabinp
     float: right;
     padding: 2px;
     vertical-align: baseline;
-    min-width: 3rem;
+    margin-inline: auto;
+    margin-right: 0;
+    /* set upper size limit */
+    max-width: 10rem;
+    max-height: 10rem;
 }
 
 .sheet-rolltemplate-pf_generic .sheet-img,
@@ -5328,9 +5355,11 @@ equipmentnav ~ tabinputtab99:not(:checked) ~ tabinputtab9:not(:checked) ~ tabinp
     background-color: Black;
     border-color: Black;
     color: White;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
+    /* FIX THE TEMPLATE */
+    /* flex-direction: row-reverse;
+    justify-content: space-between; */
+    display: inline-block;
+    width: -webkit-fill-available;
 }
 
 /* define vars */
@@ -7171,8 +7200,8 @@ also if multiple repeating sects inside h2 they are 100% wide and only h2 is nar
 }
 
 .charsheet .pf-logo img {
-    margin-top: -7px;
-    max-height: 70px;
+    margin-top: -1.4rem;
+    height: 50px;
     width: 175px;
 }
 
@@ -7182,6 +7211,8 @@ also if multiple repeating sects inside h2 they are 100% wide and only h2 is nar
     margin: auto;
     margin-right: 0;
     position: relative;
+    top: -2px;
+    transform: scale(.85);
     width: 7.75em;
 }
 
